@@ -63,6 +63,11 @@ namespace VirtualEnvironment.Platform
                     streamWriter.WriteLine();
         }
 
+        internal static void Push(Type type, string message, Exception exception)
+        {
+            Push(type, message, $"@{exception}");
+        }
+        
         internal static void Push(Type type, params string[] messages)
         {
             var publication = String.Join("\r\n", messages.Where(message =>
@@ -84,7 +89,7 @@ namespace VirtualEnvironment.Platform
             var output = String.Join("\r\n", messages.Select(message => Regex.Replace(message, "^@+", "")).ToArray()); 
             output = String.Format("{0} {1} ", timestamp, type.ToString().ToUpper()) + output;
             var prefix = String.Format("{0} {1} ", timestamp, " ... ");
-            output = Regex.Replace(output, "(\r\n)|(\n\r)|[\r\n]", "\r\n" + prefix);
+            output = Regex.Replace(output, @"[^\S\r\n]*((\r\n)|(\n\r)|[\r\n])[^\S\r\n]*", "\r\n" + prefix);
             using (var streamWriter = File.AppendText(loggingFile))
                 streamWriter.WriteLine(output);
         }
